   when told to disable it via --disable-ssl_slave. Reported by Cheetah. [MG]
 * Sound from an AUDIBLE wagon object used to propagate into other wagon
   objects in the same location with an @listen of *. It now does so again.
   Reported by Xeero and Padraic. [MG]
 * Loading a reboot db is more robust. Inspired by Padraic. [SW]
 * scan() couldn't be used by rooms. Reported by Padraic. [MG]

Commands:
 * @edit/regexp[/all][/nocase], command version of regedit[all][i]().
   Suggested by Minion. [MG]

Minor changes:
 * Logged messages now have events in the LOG tree. Suggested by
   Padraic. [SW]
 * Objects belonging to destroyed players now get chowned to a
   configurable player (probate_judge in mush.cnf) instead of
   God. [SW]
 * regmatch() now returns an error for invalid regexps, whether you're
   storing subpattern matches or not. Reported by Sketch. [MG]
 * Commands involving movement now check the enactor is a player/thing,
   instead of just relying on the command's restriction. [MG]
 * @switch, switch(), @[in]filter and attribute @locks (foo:bar) now do
   lte/gte wildcard matches on <=foo and >=foo patterns. Inspired by 
   Wiggles. [MG]
 * New channel mogrifier, MOGRIFY`NOBUFFER, can be used to exclude certain
   @chats from the channel's recall buffer. Suggested by Wiggles. [MG]
 * version() now reports svn revision/date where available. Patch by
   Padraic.

Version 1.8.5 patchlevel 0                                 Feb 12, 2012

Major changes:
 * The PCRE library is now required to build Penn, instead of falling
   back to an old, buggy version formerly bundled with the MUSH. [SW]
   Daniko assisted greatly with Windows changes and documentation.
 * The OpenSSL library is now required to build Penn. Again, Daniko has
   provided instructions for installing on Windows. [SW]
 * A new command prefix, "}", enables debug for a single execution of the
   command  - }think foo, }+who, etc. See 'help }' for more info. Suggested
   by Wiggles and [GM]. [MG]
